[package]
name = "pyth-solana-receiver-sdk"
version = "0.1.0"
description = "SDK for the Pyth Solana Receiver program"
authors = ["Pyth Data Association"]
repository = "https://github.com/pyth-network/pyth-crosschain"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "pyth_solana_receiver_sdk"


[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git" }
hex = ">=0.4.3"
solana-program = ">=1.14.5"
serde = { version = "1.0.144", features = ["derive"] }
quickcheck = { version = "1", optional = true}
