[package]
name = "pyth-solana-receiver-sdk"
version = "0.1.0"
description = "SDK for the Pyth Solana Receiver program"
authors = ["Pyth Data Association"]
repository = "https://github.com/pyth-network/pyth-crosschain"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "pyth_solana_receiver_sdk"


[dependencies]
anchor-lang = "0.30.1"
hex = ">=0.4.3"
pythnet-sdk = { version = "2.0.0"}
solana-program = ">=1.14.5"
serde = { version = "1.0.144", features = ["derive"] }
quickcheck = { version = "1", optional = true}
